# school-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SECURITY.md  config.yaml  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: V1_RELEASE_PLAN.md  assessment.md  claude-code-fix-plan.md  improvements.md  scanner-plan.md  style-architecture.md
docs/guides/: Gemini_API-Key_erstellen_-_Schritt-fuer-Schritt-Anleitung.docx  Groq_API-Key_erstellen_-_Schritt-fuer-Schritt-Anleitung.docx  How_to_Get_a_Gemini_API_Key_-_Step_by_Step_Guide.docx  How_to_Get_a_Groq_API_Key_-_Step_by_Step_Guide.docx
examples/: README.md
examples/manifests/: example_manifest.yaml
examples/tasks/DE-BSP/: Bewertungsbogen.docx  EnergieOneNote.docx  IT_B1_A1_Energie.docx  IT_B1_A1_Energie_Texte.docx
examples/tasks/WI-BSP/: AngebotNachfrageOneNote.docx  Aufgaben_Angebot_Nachfrage.docx
schulpipeline/: __init__.py  __main__.py  agents.py  audit.py  cli.py  config.py  documents.py  feedback.py  logging_config.py  pipeline.py  presets.py  requirements.py  review.py  scanner.py  session.py  styles.py  worksheet.py
schulpipeline/artifacts/: __init__.py  converter.py  docx_builder.py  md_builder.py  pptx_builder.py  slide_registry.py
schulpipeline/backends/: __init__.py  base.py  gemini.py  openai_compat.py  pricing.py  router.py
schulpipeline/research/: __init__.py  web.py
schulpipeline/stages/: __init__.py  artifact.py  base.py  intake.py  plan.py  research.py  synthesize.py
scripts/: generate_examples.py
specs/: amendments.json  artifact.json  audit.json  classify_docs.json  classify_report.json  decompose.json  fill_template.json  intake.json  plan.json  research.json  solve.json  synthesis.json
tests/: conftest.py  run_tests.py  test_artifacts.py  test_backends.py  test_cli.py  test_config.py  test_imports.py  test_pipeline_e2e.py  test_pricing.py  test_progress.py  test_research_web.py  test_review.py  test_router.py  test_scanner.py  test_session.py  test_stages.py  test_styles.py  test_worksheet.py
tests/live/: conftest.py  test_backends_live.py  test_e2e_live.py  test_stages_live.py
