[project]
name = "schulpipeline"
version = "1.0.0"
description = "Spec-driven pipeline for automating school assignments"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pre-commit>=3.5"]
pdf = ["pdfplumber>=0.9"]
ollama = []  # no extra deps, just a config flag

[project.scripts]
schulpipeline = "schulpipeline.cli:main"

[tool.setuptools.packages.find]
include = ["schulpipeline*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: requires real API keys and network access",
]
