[project]
name = "schulpipeline"
version = "1.0.0"
description = "Spec-driven pipeline for automating school assignments"
requires-python = ">=3.11"
authors = [{name = "fabs133"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["school", "pipeline", "automation", "pptx", "docx", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pre-commit>=3.5"]
pdf = ["pdfplumber>=0.9"]
review = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "httpx>=0.27"]
ollama = []  # no extra deps, just a config flag

[project.scripts]
schulpipeline = "schulpipeline.cli:main"

[project.urls]
Homepage = "https://github.com/fabs133/school-pipeline"
Repository = "https://github.com/fabs133/school-pipeline"
Issues = "https://github.com/fabs133/school-pipeline/issues"
Changelog = "https://github.com/fabs133/school-pipeline/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["schulpipeline*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: requires real API keys and network access",
]
